--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -63,6 +63,9 @@ data:
         - **Web Dev**: React, Bootstrap, PHP, NodeJS, jQuery, Flask, Spark Java
         - **Data Science**: Keras, TensorFlow, NumPy, OpenCV
         - **Database**: MySQL
+        - test
+        - test
+        - test
 
   achievements:
     title: Achievements & Awards
