Populated the about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,13 @@
 ### Site Settings ###
 title               : GokulVSD
-description         : Hi, I'm **Gokul Vasudeva** :wave:<br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+description         : Hi, I'm **Gokul Vasudeva** :wave:<br>
+                      I enjoy keeping things organised in a cohesive manner, including data about myself. 
+                      To that extent, this is my personal website / blog / showcase. I periodically update my blog with new posts, reflecting what I'm up to. 
+                      I also use this website as a professional showcase, including keeping an up-to-date resume available, and a list of my personal projects and achievements. <br> <br>
+                      Professionally, I'm a Computer Science Engineer, who has loved computers, including everything related to them, ever since I was exposed to them when I was about 10. <br> <br>
+                      I treasure experiences new and old, and feel that life is too short to not enjoy the little things, having fun along the way. I have a strong desire to do things right the
+                      first time, which requires me to plan things out, and employ foresight, which is a double edged sword. I regularly ponder about philosophy, 
+                      science, and our existence. I consider myself to be an optimistic realist, with a good sense of humour. 
 baseurl             : ""
 
 
