--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -54,7 +54,7 @@ data:
         - [**MonoDAC**](https://github.com/GokulVSD/MonoDAC): Monocular Depth Estimation via a Fully Convolutional Deep Neural Network, utilising Atrous Convolutions, with 3D Point Cloud Visualisation.
         - [**Wuasta**](https://github.com/GokulVSD/Wuasta): A predictive Alarm Assistant which pragmatically wakes you up at just the right time, taking into account real-time traffic conditions.
         - [**Open Source**](https://github.com/GokulVSD): Will fill later.
-        - [**Technical Blog**](https://gokulvsd.github.io): Will fill later.
+        - [**Technical Blog**](https://gokulvsd.github.io): Authored several technical & philosophical posts on programming, designs, concepts, and challenging problems I’ve faced.
 
 
 
