Added meta title for SEO

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -72,6 +72,6 @@ data:
       - InGenius Hackathon:
           date: 2017
           subtitle: 1st Place, in the first year category
-      - HP Code Wars:
+      - HP Enterprise:
           date: 2015
-          subtitle: Honorary Award
+          subtitle: Code Wars Honorary Award
