--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,7 +4,7 @@
   location: Bangalore
   from: 2020
   to: present
-  description: Upcoming, will be populating this after I've worked for a few months.
+  description: Will be populating this after I've worked for a few months.
 
 - title: Student
   organisation: PES University
