Major UI fixes, added certificates

--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -11,7 +11,7 @@
 - title: Excellence in Computer Programming & Technical Expertise
   achievement: Bethany Junior College
   date: 2016
-  description: Awarded for IT work and troubleshooting in 12th grade. 
+  description: Awarded for IT work and troubleshooting during my 12th grade. 
 
 - title: Honorary Award
   achievement: HP Enterprise Code Wars
@@ -21,6 +21,6 @@
 - title: Computer Science Topper
   achievement: Bethany High School
   date: 2014
-  description: In 10th grade board exams.
+  description: For my performance during my 10th grade board exams.
 
 
