--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ description         : Hi, I'm **Gokul Vasudeva** :wave:<br>
                       Professionally, I'm a Computer Science Engineer, who has loved computers, including everything related to them, ever since I was exposed to them when I was about 10. <br> <br>
                       I treasure experiences new and old, and feel that life is too short to not enjoy the little things, having fun along the way. I have a strong desire to do things right the
                       first time, which requires me to plan things out, and employ foresight, which is a double edged sword. I regularly ponder about philosophy, 
-                      science, and our existence. I consider myself to be an optimistic realist, with a good sense of humour. 
+                      science, and our existence. I consider myself to be an optimistic realist, with a good sense of humour. <br> <br>
+                      In terms of my career aspirations, my ideal career trajectory would have me working in the intersection of highly scalable distributed systems, backend engineering, and production Machine Learning.
 baseurl             : ""
 
 
@@ -38,12 +39,18 @@ author:
 ### Posts ###
 permalink: /blog/:title
 
+### Certificates ###
+permalink: /certificates/:title
+
 
 ### Collections ###
 collections:
   projects:
     output: true
     permalink: /projects/:name
+  certificates:
+    output: true
+    permalink: /certificates/:title
 
 
 
@@ -54,6 +61,11 @@ defaults:
       type: "projects"
     values:
       layout: "page"
+  - scope:
+      path: ""
+      type: "certificates"
+    values:
+      comments: false
   - scope:
       path: ""
       type: "posts"
