Completed RAII series

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : GokulVSD | blog & website | Gokul Vasudeva
+title               : GokulVSD - blog & website - Gokul Vasudeva
 tagline             : Everything to do with Gokul Vasudeva
 description         : Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links
 url                 : https://gokulvsd.github.io
