--- a/_data/language-skills.yml
+++ b/_data/language-skills.yml
@@ -18,7 +18,7 @@
   percentage: 85
   color: dark
 
-- name: TensorFlow & Scikit Learn
+- name: TensorFlow & SKLearn
   percentage: 65
   color: primary
 
