Updated resume and relevant about me info

--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -1,3 +1,8 @@
+- title: India Research and Development Excellence Award
+  achievement: ThoughtSpot
+  date: 2022
+  description: For taking strong ownership of SpotIQ and consistency in delivering on high impact deliverables with diligence and customer empathy.
+
 - title: 1st Place
   achievement: InGenius Hackathon
   date: 2017
