--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,9 +1,18 @@
+- title: Member of Technical Staff IV
+  organisation: ThoughtSpot
+  website: https://www.thoughtspot.com/
+  location: Bengaluru
+  from: 2023
+  to: Present
+  description:  <b><i>SpotIQ</i> | <i>Fullstack Developer</i></b>
+                <br><br><b>❯❯</b>&nbsp;&nbsp; To be updated.
+
 - title: Member of Technical Staff III
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
   location: Bengaluru
   from: 2022
-  to: Present
+  to: 2023
   description:  <b><i>SpotIQ</i> | <i>Fullstack Developer</i></b>
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Incubated and developed SpotIQ Cortex, a general-purpose time series forecasting and anomaly detection service with heterogeneous model orchestration including model ensembling, invalidation and retraining on new data ingress. Cortex allowed us to forecast and predict customer KPIs unlike anything else on the market, allowing for threshold based alerts and better insights.
 
