Changed from roman to decimal

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,4 +1,4 @@
-- title: Member of Technical Staff IV
+- title: Member of Technical Staff 4
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
   location: Bengaluru
@@ -7,7 +7,7 @@
   description:  <b><i>SpotIQ</i> | <i>Fullstack Developer</i></b>
                 <br><br><b>❯❯</b>&nbsp;&nbsp; To be updated.
 
-- title: Member of Technical Staff III
+- title: Member of Technical Staff 3
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
   location: Bengaluru
@@ -16,7 +16,7 @@
   description:  <b><i>SpotIQ</i> | <i>Fullstack Developer</i></b>
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Incubated and developed SpotIQ Cortex, a general-purpose time series forecasting and anomaly detection service with heterogeneous model orchestration including model ensembling, invalidation and retraining on new data ingress. Cortex allowed us to forecast and predict customer KPIs unlike anything else on the market, allowing for threshold based alerts and better insights.
 
-- title: Member of Technical Staff II
+- title: Member of Technical Staff 2
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
   location: Bengaluru
